--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,12 @@ colorama==0.4.6
 decorator==5.1.1
 Django==5.0.1
 django-extensions==3.2.3
+django-taggit==5.0.1
 exceptiongroup==1.2.0
 executing==2.0.1
 ipython==8.20.0
 jedi==0.19.1
+Markdown==3.5.2
 matplotlib-inline==0.1.6
 parso==0.8.3
 prompt-toolkit==3.0.43
