--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Markdown==3.5.2
 matplotlib-inline==0.1.6
 parso==0.8.3
 prompt-toolkit==3.0.43
+psycopg-binary==3.1.17
 pure-eval==0.2.2
 Pygments==2.17.2
 python-dotenv==1.0.0
